--- a/package.json
+++ b/package.json
@@ -30,21 +30,21 @@
     "android": "react-native-scripts android",
     "ios": "react-native-scripts ios",
     "test": "node node_modules/jest/bin/jest.js --watch",
-    "postinstall": "rndebugger-open",
-    "precommit": "yarn eslint src"
+    "postinstall": "rndebugger-open"
   },
   "jest": {
     "preset": "jest-expo"
   },
   "dependencies": {
     "app": "^0.1.0",
+    "expo": "^22.0.2",
     "lodash": "^4.17.4",
+    "mathjs": "^3.16.5",
+    "react": "16.0.0-beta.5",
+    "react-native": "^0.49.5",
     "react-navigation": "^1.0.0-beta.11",
     "react-redux": "^5.0.5",
     "redux": "^3.7.2",
-    "redux-thunk": "^2.2.0",
-    "expo": "^22.0.2",
-    "react": "16.0.0-beta.5",
-    "react-native": "^0.49.5"
+    "redux-thunk": "^2.2.0"
   }
 }
