--- a/package.json
+++ b/package.json
@@ -11,17 +11,18 @@
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
     "eslint-import-resolver-babel-module": "^3.0.0",
+    "eslint-plugin-flowtype": "^2.40.1",
     "eslint-plugin-import": "^2.7.0",
     "eslint-plugin-jsx-a11y": "^5.1.1",
     "eslint-plugin-promise": "^3.5.0",
     "eslint-plugin-react": "^7.1.0",
     "eslint-plugin-react-native": "^3.0.1",
     "husky": "^0.14.3",
-    "react-native-debugger-open": "^0.3.12",
-    "remote-redux-devtools": "^0.5.12",
-    "react-native-scripts": "1.7.0",
     "jest-expo": "^22.0.0",
-    "react-test-renderer": "16.0.0-beta.5"
+    "react-native-debugger-open": "^0.3.12",
+    "react-native-scripts": "1.7.0",
+    "react-test-renderer": "16.0.0-beta.5",
+    "remote-redux-devtools": "^0.5.12"
   },
   "main": "./node_modules/react-native-scripts/build/bin/crna-entry.js",
   "scripts": {
