--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
     "babel-eslint": "^7.2.3",
     "babel-plugin-module-resolver": "^2.7.1",
     "babel-plugin-transform-react-jsx-source": "^6.22.0",
+    "babel-preset-env": "^1.6.1",
     "babel-preset-expo": "^4.0.0",
     "eslint": "^4.3.0",
     "eslint-config-airbnb": "^15.1.0",
@@ -40,7 +41,7 @@
     "app": "^0.1.0",
     "expo": "^22.0.2",
     "lodash": "^4.17.4",
-    "mathjs": "^3.16.5",
+    "mathjs": "^4.0.0",
     "react": "16.0.0-beta.5",
     "react-native": "^0.49.5",
     "react-navigation": "^1.0.0-beta.11",
